# R-Type

./: CMakeLists.txt  README.md
Libs/SFML-2.4.2/lib/: libsfml-audio-d.so.2.4.2  libsfml-audio.so.2.4.2  libsfml-graphics-d.so.2.4.2  libsfml-graphics.so.2.4.2  libsfml-network-d.so.2.4.2  libsfml-network.so.2.4.2  libsfml-system-d.so.2.4.2  libsfml-system.so.2.4.2  libsfml-window-d.so.2.4.2  libsfml-window.so.2.4.2
Libs/boost_1_64_0/stage/lib/: libboost_coroutine-vc141-mt-1_64.lib  libboost_coroutine-vc141-mt-gd-1_64.lib  libboost_date_time-vc141-mt-1_64.lib  libboost_date_time-vc141-mt-gd-1_64.lib  libboost_exception-vc141-mt-1_64.lib  libboost_exception-vc141-mt-gd-1_64.lib  libboost_system-vc141-mt-1_64.lib  libboost_system-vc141-mt-gd-1_64.lib  libboost_thread-vc141-mt-1_64.lib  libboost_thread-vc141-mt-gd-1_64.lib
R-type/Common/include/: AMovementComponent.hpp  Binary.hpp  CollisionComponent.hpp  CoolDown.hpp  CosHorizontalMovementComponent.hpp  DirectionComponent.hpp  GraphicComponent.hpp  LibraryCrossLoader.hpp  LifeComponent.hpp  PositionComponent.hpp  PowerComponent.hpp  Protocol.hpp  ServerIDComponent.hpp  SizeComponent.hpp  SpeedComponent.hpp  StraightMoveComponent.hpp  TeamComponent.hpp
R-type/Common/ssl_files/: dh512.pem  server.crt  server.csr  server.key  server.key.secure
R-type/SolidEngine/include/: AComponent.hpp  AEntity.hpp  ASystem.hpp  Action.hpp  Alias.hpp  EntityManager.hpp  Event.hpp  Id.hpp  Manager.hpp  Mediator.hpp  Rtype.hpp  SystemManager.hpp
R-type/client/: CMakeLists.txt
R-type/client/include/: ANetwork.hpp  ActionComponent.hpp  ClickableComponent.hpp  Client.hpp  EventSystem.hpp  GraphicSystem.hpp  InputComponent.hpp  MenuSystem.hpp  NetworkTCPSystem.hpp  QuitSystem.hpp  TCPDataProtocol.hpp  UDPSystem.hpp
R-type/client/src/: EventSystem.cpp  GraphicSystem.cpp  MenuSytem.cpp  NetworkTCPSystem.cpp  TCPReceive.cpp  TCPSend.cpp  UDPSystem.cpp  main.cpp
R-type/server/: CMakeLists.txt
R-type/server/DynamicLibraryAPI/: ADynamicEntity.hpp  BibMonster.cpp  BibMonster.hpp  CMakeLists.txt  FlakyxMonster.cpp  FlakyxMonster.hpp  MatteusMonster.cpp  MatteusMonster.hpp  README.md  SmartieMonster.cpp  SmartieMonster.hpp  SolidMonster.cpp  SolidMonster.hpp  StitchMonster.cpp  StitchMonster.hpp  TekMonster.cpp  TekMonster.hpp  TetardMonster.cpp  TetardMonster.hpp  YougoMonster.cpp  YougoMonster.hpp
R-type/server/include/: BoostServer.hpp  Core.hpp  FactoryUdpPkg.hpp  GameConfiguration.hpp  GameInstance.hpp  INetwork.hpp  IPlayer.hpp  PacketHandler.hpp  Room.hpp  RoomManager.hpp  Server.hpp  Session.hpp  UdpServer.hpp  UsernameHandler.hpp
R-type/server/include/Component/: AGeneratorComponent.hpp  AutoMoveComponent.hpp  BalancePowerComponent.hpp  BasicProjectileGeneratorComponent.hpp  BigProjectileGeneratorComponent.hpp  CooldownComponent.hpp  GeneratorContainerComponent.hpp  GiantProjectileGeneratorComponent.hpp  IdPlayerComponent.hpp  InputComponent.hpp  InputMoveComponent.hpp  LongBasicProjectileGeneratorComponent.hpp  LongBigProjectileGeneratorComponent.hpp  LongGiantProjectileGeneratorComponent.hpp  LongSmallProjectileGeneratorComponent.hpp  MessageComponent.hpp  SmallProjectileGeneratorComponent.hpp
R-type/server/include/System/: AutoMoveSystem.hpp  CollisionSystem.hpp  DeathSystem.hpp  ImpactSystem.hpp  InputSystem.hpp  MonsterGeneratorSystem.hpp
R-type/server/src/: AutoMoveSystem.cpp  BoostServer.cpp  Core.cpp  DeathSystem.cpp  GameConfiguration.cpp  GameInstance.cpp  ImpactSystem.cpp  InputSystem.cpp  MonsterGeneratorSystem.cpp  PacketHandler.cpp  Room.cpp  RoomManager.cpp  Server.cpp  Session.cpp  UdpServer.cpp  UsernameHandler.cpp  main.cpp
doc/: Rfc.txt  Server.puml  SolidEngine.puml
